Fixed layout bug with testimonials

--- a/assets/sass/modules/_home.sass
+++ b/assets/sass/modules/_home.sass
@@ -86,12 +86,14 @@
       margin-bottom: 30px
 
     .face
-      border-radius: 50%
-      +size(150px)
-      border: 2px solid white
-      box-shadow: 0 0 5px 0 rgba(255, 255, 255, 1)
+      img
+        border-radius: 50%
+        +size(150px)
+        border: 2px solid white
+        box-shadow: 0 0 5px 0 rgba(255, 255, 255, 1)
 
     .body
+      flex: 60
       margin-top: 5px
       margin-left: 30px
       color: white
